[package]
name = "cucumber"
version = "0.1.0"
authors = ["Alex McArther <acmcarther@gmail.com>"]

[dev-dependencies]
tempdir = "*"

[dependencies]
cucumber_state = { path = "./src/state" }
cucumber_server = { path = "./src/server" }
cucumber_runner = { path = "./src/runner" }
cucumber_definitions = { path = "./src/definitions" }
cucumber_event = { path = "./src/event" }
cucumber_regex = { path = "./src/regex" }
itertools = "*"

[[test]]
name = "cuke"
path = "./features/cuke.rs"
