[package]
name = "cucumber_event"
version = "0.1.0"
authors = ["Alex McArther <acmcarther@gmail.com>"]
build = "build.rs"

[features]
default = ["serde_codegen"]
nightly = ["serde_macros"]

[dev-dependencies]
serde_json = "*"

[build-dependencies]
serde_codegen = { version = "*", optional = true }
syntex = "*"
itertools = "*"

[dependencies]
itertools = "*"
serde = "*"
serde_macros = { version = "*", optional = true }
